--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <b> <mark> Why Classic Car Restoration is More Than Just a Job at Paradime Motors:</b></mark> <br>
 
       At Paradime Motors, we don’t just see ourselves as technicians or mechanics—we consider ourselves custodians of automotive history. For us, restoring classic cars and motors is a deeply personal and rewarding experience. It’s about more than just fixing what’s broken; it’s about reviving a piece of the past and ensuring it shines for future generations to enjoy.
-      
       Each car that comes into our shop has a story to tell, and it’s our mission to honor that legacy. Whether it’s the roar of an old engine or the elegance of vintage design, there’s something truly magical about breathing new life into a car that’s weathered the years. At Paradime Motors, we approach every project with the dedication and attention to detail that only true enthusiasts can offer.
       
       Why do we do it? Because for us, it’s never just a job—it’s a passion. And that’s what drives us to ensure that every restoration project exceeds expectations. When you choose Paradime Motors, you’re choosing a team that truly cares about your vehicle as much as you do.
@@ -46,6 +45,7 @@
         we treat every project with the care and attention it deserves, ensuring
         that your cherished car or motor is restored to its former glory.
       </section>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
       <article class="article1">
         <h4>
           Restore Your Ride with Our Exclusive Spring Restoration Special!
