--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,24 @@
       </section>
     </header>
     <h4 class="pageh4">Contact</h4>
-    <main></main>
+    <main>
+      <form class="section1" action="/submit" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+        <br />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+        <br />
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" />
+        <br />
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+    </main>
   </body>
   <footer>
     <p>
