--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </header>
     <h4 class="pageh4">Contact</h4>
     <main>
-      <form class="section1" method="POST" Netlify>
+      <form class="section1" Netlify>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
         <br />
