border form edit

--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
       </section>
     </header>
     <h4 class="pageh4">Contact</h4>
-    <main>
-      <form class="section1" method="post" data-netlify="true">
+    <main class="section1">
+      <form method="post" data-netlify="true">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
         <br />
