--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         we treat every project with the care and attention it deserves, ensuring
         that your cherished car or motor is restored to its former glory.
       </section>
-      <iframe width="180" height="120" src="https://youtu.be/z_fCzqhJ79c?si=xRnJDBM9SisScELs" frameborder="0" allowfullscreen></iframe>
+      <iframe width="200" height="120" src="https://www.youtube.com/embed/z_fCzqhJ79c?si=xRnJDBM9SisScELs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <article class="article1">
         <h4>
           Restore Your Ride with Our Exclusive Spring Restoration Special!
