--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paradime Motors</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-dR1ky7pKjxgq3tVzHtqGYvAC0W5X8p5FE5sw0Y5wCWTiWCKF8+Vzg2urikPjb4D4tLXQ7fzLjqRgF7Vz1xpvuA==" crossorigin="anonymous" />
   </head>
   <body>
     <!-- Header section -->
@@ -93,6 +94,12 @@
 
     <!-- Footer section -->
     <footer>
+      <p><a href="https://twitter.com" target="_blank" class="social-icon">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://facebook.com" target="_blank" class="social-icon">
+        <i class="fab fa-facebook"></i>
+      </a> </p>
       <p>
         Contact us at <a href="mailto:info@example.com">info@pm.com</a>
         <br />
