--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
     <!-- Footer section -->
     <footer>
-      <p><a href="https://twitter.com" target="_blank" class="social-icon">
+      <p><button><a href="https://twitter.com" target="_blank" class="social-icon">
         <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://facebook.com" target="_blank" class="social-icon">
+      </a></button>
+      <button><a href="https://facebook.com" target="_blank" class="social-icon">
         <i class="fab fa-facebook"></i>
-      </a> 
+      </a> </button>
       
         Contact us at <a href="mailto:info@example.com">info@pm.com</a>
         <br />
