--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-dR1ky7pKjxgq3tVzHtqGYvAC0W5X8p5FE5sw0Y5wCWTiWCKF8+Vzg2urikPjb4D4tLXQ7fzLjqRgF7Vz1xpvuA==" crossorigin="anonymous" />
   </head>
   <body>
-    <!-- Header section -->
-    <header>
+    
+    <header> <img src="logo.jpg" class="logo" alt="pm logo">
       <section>
         <h1>PARADIME MOTORS</h1>
       </section>
