--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     
-    <header> <img src="logo.jpg" class="logo" alt="pm logo">
+    <header> 
+      <div class="logobar">
+      <img src="PM Logo.png" alt="PM logo" class="logo">
       <section>
         <h1>PARADIME MOTORS</h1>
-      </section>
+      </section></div>
       <section>
         <nav>
           <ul>
